fixed quickinfo whitespace

--- a/core/asset/css/quickinfo.scss
+++ b/core/asset/css/quickinfo.scss
@@ -13,7 +13,7 @@
 	box-shadow:2px 2px 5px $colorNeutral06;
 
 	dl {
-		white-space:nowrap;
+//		white-space:nowrap;
 		dt {
 			clear:left;
 			float:left;
